# pygame-light2d

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
benchmarks/: benchmarks.py
demos/: demo2.py
examples/: demo1.py  demo2.py  example1.py  example2.py  example3.py  example4.py  test.py
examples/assets/: sources.md  sources.txt
pygame_light2d/: engine.py  light.py
pygame_light2d/shaders/: fragment_blur.glsl  fragment_light.glsl  fragment_mask.glsl  fragment_tex.glsl
src/pygame_light2d/: __init__.py  color.py  double_buff.py  engine.py  fragment_blur.glsl  fragment_draw.glsl  fragment_light.glsl  fragment_mask.glsl  hull.py  light.py  vertex.glsl
